styles reach out form response field with height, add padding to resolve input field text verticle alignment

--- a/compartments/assets/styles/main.css
+++ b/compartments/assets/styles/main.css
@@ -283,9 +283,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-div {
-  border: 1px solid red; }
-
 .wrapper {
   display: block; }
 
@@ -348,35 +345,6 @@ header {
 .subscribe_form input[type=submit]:hover {
   background-color: #4c7ac7; }
 
-.reach_out_form_container {
-  width: 50%;
-  margin: auto; }
-  .reach_out_form_container .reach_out_form input[type=text], .reach_out_form_container .reach_out_form select {
-    width: 100%;
-    margin: 8px 0;
-    border-radius: 4px;
-    box-sizing: border-box;
-    display: block; }
-  .reach_out_form_container .reach_out_form input[type=submit] {
-    width: 100%;
-    background-color: #638bce;
-    color: white;
-    font-size: 1em;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    padding: 14px 20px;
-    margin: 8px 0;
-    display: block; }
-  .reach_out_form_container .reach_out_form input[type=submit]:hover {
-    background-color: #4c7ac7; }
-
-.comment_field {
-  padding: 12px 20px; }
-
-.comment_response_field {
-  padding: 12px 0px 200px 20px; }
-
 .welcome_intro {
   padding: 5%;
   text-align: center;
@@ -407,7 +375,8 @@ header {
 .about_hero_headline {
   margin-top: 90px;
   font-size: 1.8em;
-  text-align: center; }
+  text-align: center;
+  padding-top: 130px; }
 
 .about_hero_subheadline {
   margin-top: 25px;
@@ -440,7 +409,37 @@ header {
     text-align: center; }
 
 .reach_out_section {
-  height: 800px; }
+  height: 800px;
+  background-color: #f6f3ee; }
+
+.reach_out_form_container {
+  width: 50%;
+  margin: auto; }
+  .reach_out_form_container .reach_out_form input[type=text], .reach_out_form_container .reach_out_form select {
+    width: 100%;
+    margin: 8px 0;
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: block; }
+  .reach_out_form_container .reach_out_form input[type=submit] {
+    width: 100%;
+    background-color: #272822;
+    color: white;
+    font-size: 1em;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    padding: 14px 20px;
+    margin: 8px 0;
+    display: block; }
+  .reach_out_form_container .reach_out_form input[type=submit]:hover {
+    background-color: #4c7ac7; }
+
+.comment_field {
+  padding: 12px 20px; }
+
+.comment_response_field {
+  padding: 12px 0px 200px 20px; }
 
 .footer_nav_container {
   background-color: #272822;
