--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -63,9 +63,9 @@ table {
 }
 
 // ADDS RED BORDER TO DIVS
-div{
-  border: 1px solid red;
-}
+// div{
+//   border: 1px solid red;
+// }
 
 .wrapper{
   display: block;
@@ -145,45 +145,6 @@ header{
   }
 }
 
-// ABOUT page form
-.reach_out_form_container{
-  width: 50%;
-  margin: auto;
-  .reach_out_form{
-    input[type=text], select {
-      width: 100%;
-      margin: 8px 0;
-      border-radius: 4px;
-      box-sizing: border-box;
-      display: block;
-      // margin: auto;
-    }
-    input[type=submit]{
-      width: 100%;
-      background-color: #638bce;
-      color: white;
-      font-size: 1em;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      padding: 14px 20px;
-      margin: 8px 0;
-      display: block;
-      // margin: auto;
-    }
-    input[type=submit]:hover {
-      background-color: #4c7ac7;
-    }
-  }
-}
-.comment_field{
-  padding: 12px 20px;
-}
-
-.comment_response_field{
-  padding: 12px 0px 200px 20px;
-}
-
 .welcome_intro{
   padding: 5%;
   text-align: center;
@@ -221,6 +182,7 @@ header{
   margin-top: 90px;
   font-size: 1.8em;
   text-align: center;
+  padding-top: 130px;
 }
 .about_hero_subheadline{
   margin-top: 25px;
@@ -259,6 +221,46 @@ header{
 
 .reach_out_section{
   height: 800px;
+  background-color: #f6f3ee;
+}
+
+// ABOUT page form
+.reach_out_form_container{
+  width: 50%;
+  margin: auto;
+  .reach_out_form{
+    input[type=text], select {
+      width: 100%;
+      margin: 8px 0;
+      border-radius: 4px;
+      box-sizing: border-box;
+      display: block;
+      // margin: auto;
+    }
+    input[type=submit]{
+      width: 100%;
+      background-color: #272822;
+      color: white;
+      font-size: 1em;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      padding: 14px 20px;
+      margin: 8px 0;
+      display: block;
+      // margin: auto;
+    }
+    input[type=submit]:hover {
+      background-color: #4c7ac7;
+    }
+  }
+}
+.comment_field{
+  padding: 12px 20px;
+}
+
+.comment_response_field{
+  padding: 12px 0px 200px 20px;
 }
 
 .footer_nav_container{
